--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,69 @@ body{
     border-radius: 5px;
     padding: 5px;
 }
+
+
+/* banner section started */
+
+.banner-container{
+    max-width: 1400px;
+    margin: 60px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+     /* background-image: url("../images/Group\ 14.png");
+     background-repeat: no-repeat; */
+}
+
+.banner-title{
+    width: 50%;
+    padding-left: 80px;
+}
+
+.banner-title h1{
+    font-size: 48px;
+    font-weight: 600;
+}
+.banner-title .goat{
+    font-size: 95px;
+    font-weight: 800;
+    background: linear-gradient(to bottom,  #F948B2,#8758F1);
+    color: transparent;
+    -webkit-background-clip: text;
+}
+
+.banner-title p{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.btn-primary{
+    color: #fff;
+    font-weight: 600;
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    font-size: 20px;
+    padding: 10px 20px;
+    border: 0;
+}
+.btn{
+    color: #fff;
+    font-weight: 600;
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg,#4EC5F7 0%, #4EC5F7 100%));
+    font-size: 20px;
+    padding: 10px 20px;
+    border: 0;
+}
+.banner-btn{
+    padding: 20px;
+}
+
+.banner-img .img{
+    width: 500px;
+    object-fit: cover;
+    /* margin-right: 100px; */
+}
+
+
+
