--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,8 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-     /* background-image: url("../images/Group\ 14.png");
-     background-repeat: no-repeat; */
+     background-image: url("../images/Group\ 14.png");
+     background-repeat: no-repeat;
 }
 
 .banner-title{
@@ -80,7 +80,7 @@ body{
     font-size: 48px;
     font-weight: 600;
 }
-.banner-title .goat{
+.banner-title  .goat{
     font-size: 95px;
     font-weight: 800;
     background: linear-gradient(to bottom,  #F948B2,#8758F1);
@@ -114,12 +114,38 @@ body{
 .banner-btn{
     padding: 20px;
 }
-
 .banner-img .img{
     width: 500px;
     object-fit: cover;
-    /* margin-right: 100px; */
+}
+/* banner section ended */
+
+
+
+
+/* video section started */
+.video-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  max-width: 1400px;
+  margin: 0 auto;
+}
+ 
+.video-content{
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-
-
+.video-title{
+    font-size: 40px;
+    font-weight: 700;
+    padding: 10px;
+}
+.video-description{
+    font-size: 15px;
+}
+.video-title .funny{
+    background: linear-gradient(to bottom,  #F948B2,#8758F1);
+    color: transparent;
+    -webkit-background-clip: text;
+}
