--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ body{
 .feature-title{
     font-size: 40px;
     font-weight: 700;
+
 }
 .feature-title .play{
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
@@ -178,18 +179,33 @@ body{
 }
 .img{
     width: 80%;
-
 }
 .img-1{
     width: 60%;
     height: 50%;
-    border: 10px solid #fff;
 }
 .taking{
     width: 400px;
     position: relative;
     bottom: 200px;
     right: 50px;
+}
 
+/* game section started */
+.games-container{
+    display: flex;
+    /* min-height: 60px; */
+    justify-content: space-around;
+    
 
 }
+.games-container img{
+    width: 50px;
+    height: 50px;
+
+}
+.games-container p{
+    font-size: 20px;
+}
+
+/* game section ended */
