--- a/css/responsive.css
+++ b/css/responsive.css
@@ -56,9 +56,9 @@
         grid-template-columns: repeat(1,1fr);
         margin-left: 30px;
     }
+    /* video section responsive */
 
-
-
+   /* feature-section started  */
     .feature-content{
         max-width: 450px;
         margin: 0 auto;
@@ -87,6 +87,34 @@
         position: relative;
         top: 180px;
         left: 65px;
+    }
+    /* feature section ended */
+
+    .games-container{
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 0;
+    }
+
+    .card{
+        width: auto;
+        height: auto;
+        margin-right: 0;
+
+    }
+
+    .card:hover{
+        color: #F948B2;
+        border: 1px solid #F948B2;
+    }
+
+    .card img{
+        width: 30px;
+        height: 30px;
+
+    }
+    .card p{
+        font-size: 8px;
     }
 }
 
@@ -126,16 +154,28 @@
         margin-left: 30px;
     }
     .feature-content{
-        padding-left: 5px;
-        padding-top: 10px;
+        margin: 0 auto;
+        width: 90%;
         text-align: center;
-
+        padding: 10px;
+        padding-bottom: 50px;
+    }
+    .feature-title{
+        font-size: 30px;
     }
     .feature-profile{
-        padding-left: 120px;
-       }
-
-    .feature{
-        gap: 20px;
+        width: 70%;
+        text-align: center;
+    }
+    .img-1{
+        width: 120%;
+        object-fit: cover;
+    }
+    .img-2{
+        width: 85%;
+        object-fit: cover;
+        position: relative;
+        top: 320px;
+        left: 65px;
     }
 }
