--- a/css/style.css
+++ b/css/style.css
@@ -197,40 +197,32 @@ body{
 }
 
 /* game section started */
-.games{
-    border: 1px solid red;
-    max-width: 1400px;
-    margin: 120px auto;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
 
 .games-container{
     display: flex;
-    justify-content: space-around;
-}
-.games-content{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 50px;
+    justify-content: center;
+    max-width: 1400px;
+    margin: 100px auto;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 .card{
     display: flex;
     align-items: center;
-    background-color: skyblue;
-    border: 1px solid white;
+    background-color: white;
     border-radius: 50px;
+    gap: 10px;
+    margin-right: 30px;
 }
-.games-container img,
-.games-content img
-{
+.card img{
     width: 50px;
     height: 50px;
-
 }
-.games-container p,
-.games-content p{
-    font-size: 20px;
+.card p{
+    font-size: 14px;
 }
-
+.card:hover{
+    color: #F948B2;
+    border: 1px solid #F948B2;
+}
 /* game section ended */
