--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ body{
 .nav{
     background-color: white;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-
     padding: 20px;
 }
 .nav-container{
@@ -39,7 +38,7 @@ body{
 
 }
 .logo-container p{
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .nav-item-container{
@@ -226,3 +225,52 @@ body{
     border: 1px solid #F948B2;
 }
 /* game section ended */
+
+/* footer section started */
+
+
+
+.footer{
+    background-color: black;
+}
+.footer{
+    display: flex;
+    flex-direction: column;
+    gap: 30px ;
+    padding-bottom: 100px;
+
+}
+.logo-container{
+    display: flex;
+    margin-top: 100px;
+    font-size: 45px;
+    font-weight: 700;
+    gap: 10px;
+    justify-content: center;
+   
+}
+/* .services{
+    display: flex;
+    font-size: 15px;
+    font-weight: 600;
+    justify-content: center;
+    gap: 40px;
+    color: #fff;
+}  */
+.icons{
+    display: flex;
+     gap: 15px;
+    justify-content: center;
+}
+.teams,.services{
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    font-weight: 400;
+    gap: 30px;
+    color: rgba(255, 255, 255, 0.60);
+}
+.copy{
+    text-align: center;
+    color: rgba(255, 255, 255, 0.60);
+}
