--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,11 +36,13 @@
         font-size: 40px;  
     }
     .banner-title p{
-        font-size: 20px;
+        font-size: 10px;
 
     }
     .banner-btn{
         display: flex;
+        font-size: 10px;
+        padding: 0;
 
     }
     .btn-primary{
@@ -173,6 +175,11 @@
     }
     .banner-btn{
         display: flex;
+        font-size: 10px;
+        padding: 0;
+    }
+    .banner-title p{
+        font-size: 12px;
     }
 
     .video-container{
