--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body{
     font-family: 'Lato', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
-
 .gamer{
     color: #FF42A5;
     font-weight: 700;
@@ -17,36 +16,31 @@ body{
 .nav{
     background-color: white;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-    padding: 20px;
+    padding: 5px;
 }
 .nav-container{
-    min-height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     max-width: 1400px;
+    min-height: 60px;
     margin: 0 auto;
 }
-
 .logo-container{
     display: flex;
 }
-
 .logo-container img{
     width: 70px;
     height: 40px;
-
 }
 .logo-container p{
-    font-size: 20px;
+    font-size: 30px;
 }
-
 .nav-item-container{
    width: 50%;
    display: flex;
    justify-content: space-between;
 }
-
 .nav-item-container a{
      text-decoration: none;
      font-size: 20px;
@@ -240,23 +234,19 @@ body{
     padding-bottom: 100px;
 
 }
-.logo-container{
+.logo-style{
     display: flex;
     margin-top: 100px;
     font-size: 45px;
     font-weight: 700;
     gap: 10px;
     justify-content: center;
-   
 }
-/* .services{
-    display: flex;
-    font-size: 15px;
-    font-weight: 600;
-    justify-content: center;
-    gap: 40px;
-    color: #fff;
-}  */
+
+.logo-style img{
+    width: 70px;
+    height: 50px;
+}
 .icons{
     display: flex;
      gap: 15px;
