--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,6 +62,26 @@
     .video-container{
         grid-template-columns: repeat(1,1fr);
         margin-left: 30px;
+        gap: 50px;
+    }
+    .video-title{
+        font-size: 25px;
+    }
+    .video-description{
+        font-size: 10px;
+    }
+    .video-container p{
+        font-size: 15px;
+    }
+    .video-1 img{
+        width: 80%;
+        height: 100%;
+        padding-left: 50px;
+    }
+    .video-1 p{
+        font-size: 10px;
+        text-align: center;
+        padding-right: 20px;
     }
     /* video section responsive */
 
@@ -113,7 +133,7 @@
     }
     .card:hover{
         color: #F948B2;
-        border: 1px solid #F948B2;
+        border: 3px solid #F948B2;
     }
 
     .card img{
@@ -147,14 +167,21 @@
         font-size: 10px;
     }
 
-    .logo-container{
-        font-size: 25px;
-        gap: 15px;
+    .logo-style{
+        font-size: 20px;
+        /* gap: 15px; */
+    }
+    .logo-style img{
+        width: 50px;
+        height: 30px;
     }
     .copy{
         font-size: 10px;
     }
 }
+
+
+
 
 /* tablet device */
 
@@ -180,6 +207,9 @@
     /* .banner-title{
         margin-right: 50px;
     } */
+    .banner-title{
+        padding-right: 90px;
+    }
     .banner-title h1{
         font-size: 20px;  
     }
@@ -192,8 +222,17 @@
     .banner-btn{
         display: flex;
         font-size: 10px;
-        padding: 0;
+        padding-left: 30px;
+        gap: 5px;
+        /* padding: 0; */
     }
+    .btn-primary {
+        font-size: 8px;
+    }
+    .btn{
+        font-size: 8px;
+    }
+
 
     .video-container{
         grid-template-columns: repeat(2,1fr);
