--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,6 +20,7 @@
     /* banner responsive started */
     .banner-container{
         flex-direction: column-reverse;
+        gap: 50px;
         background: none;
     }
     .banner-title{
@@ -224,7 +225,6 @@
         font-size: 10px;
         padding-left: 30px;
         gap: 5px;
-        /* padding: 0; */
     }
     .btn-primary {
         font-size: 8px;
@@ -232,8 +232,6 @@
     .btn{
         font-size: 8px;
     }
-
-
     .video-container{
         grid-template-columns: repeat(2,1fr);
         margin-left: 30px;
